# anarchy_bot

./: dockerfile  pyproject.toml  readme.md
.github/workflows/: docker-publish.yml
anarchy_bot/: bot.py  common.py
anarchy_bot/lang/: en.yml
tests/: conftest.py  test_votes.py
